# actalux

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  DESIGN.md  Dockerfile  LICENSE  README.md  TASKS.md  design-preview.html  fly.toml  pyproject.toml  requirements-cpu.txt
docs/: API.md  Actalux_Entity_Resolution_Architecture.md  SECRETS.md  city-budget-ingest.md
eval/: README.md  answer_judgments.json  answers.json  bench_rerank_latency.py  judgments.json  queries.json  rankings.json
scripts/: analyze_self_intro_coverage.py  analyze_stylometry.py  apply_migrations.py  apply_zoom_verdicts.py  attribute_speaker.py  audit_corpus.py  backfill_budget_citation_ids.py  backfill_chunk_timestamps.py  backfill_citation_ids.py  backfill_doc_summaries.py  backfill_orgs.py  backfill_places.py  backfill_provenance.py  backfill_transcript_chapters.py  backfill_video_ids.py  backfill_whisperx.py  bench_ask.py  build_id_sheet.py  check_minutes_coverage.py  city_adopted_budget_FY2026.json  city_budget_figures.json  clean_control_chars.py  cleanup_orphan_speaker_identities.py  compress_and_upload_pdf.py  confirm_speaker.py  crawl_canva_maps.py  crawl_civicplus.py  crawl_clayton_finance.py  crawl_comms.py  crawl_curriculum.py  crawl_youtube.py  dedup_html_pdf_twins.py  dedupe_documents.py  dese_common.py  diarization_ab.py  diarization_headtohead.py  discover_corrections.py  download_documents.py  draft_substack.py  enroll_voiceprints.py  (+91 more)
tests/: conftest.py  test_api.py  test_asbr_xml.py  test_ask.py  test_attribute_speaker.py  test_audit_corpus.py  test_charts.py  (+89 more)
(+175 files in other folders)
