[project]
name = "actalux"
version = "0.1.0"
description = "Citation-first searchable archive of local government records"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "httpx>=0.28",
    "supabase>=2.11",
    "sentence-transformers>=3.3",
    "pymupdf>=1.25",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "pymupdf4llm>=1.27.2.2",
    "anthropic==0.93.0",
    "openai>=1.50",
    "yt-dlp>=2025.1",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/actalux"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff==0.15.9",
    # accelerate: required by the zerank reranker's device_map load (eval only,
    # not used by production search). See src/actalux/eval/rerank.py.
    "accelerate>=1.0",
]
# Speaker diarization: the Modal client only (the GPU image carries pyannote +
# torch, defined in src/actalux/diarization/modal_runner.py — never the web image).
diarization = [
    "modal>=1.0",
]
